test/static/wrong/case5a.kk
// case sensitivity
import modD = static/modA
import static/modB

alias wrong = modD/aInt
